# GEMM_CUDA

./: CMakeLists.txt  README.md  gemm.cu  gemm_animation.py  hbm_analysis.yaml  plot_performance.py  run.sh  run_autotune.sh  run_kernels.sh  test_cjk.py
bugs/: kernel5_reference_param_bug.md
scripts/: kernel_10_autotuner.sh  kernel_9_autotuner.sh  ncu_profile_all.sh  run_all_kernels.sh
src/: error_check.cuh  kernels.cuh  runner.cu  runner.cuh
src/kernels/: 10_kernel_reg_reuse_in_warptiling.cuh  12_kernel_double_buffering.cuh  1_naive.cuh  2_kernel_global_mem_coalesce.cuh  3_kernel_shared_mem_blocking.cuh  4_kernel_1D_blocktiling.cuh  4_kernel_regs_1D_blocktiling.cuh  5_kernel_2D_blocktiling.cuh  5_kernel_regs_2D_blocktiling.cuh  6_kernel_vectorize.cuh  6_kernel_vectorize_and_resolve_As_bank_conflict.cuh  7_kernel_resolve_bank_conflicts.cuh  7_kernel_using_rearrangement_to_resolve_Bs_bank_conflicts.cuh  8_kernel_using_bank_extra_col_to_resolve_Bs_bank_conflict.cuh  9_kernel_autotuned.cuh
